feat: update to java 25